# rag_model

./: .gitignore  LICENSE  README.md  chat_history.json  dora_chunks_simple.json  pyproject.toml  requirements.txt  test_reranking.py
embeddings_index/: faiss.index
frontend/: app.py
src/: __init__.py  embeddings.py  evaluation.py  generator_prompt.txt  main.py  model.py  pipeline.py  question_context_pairs_default.json  rag_core.py  recursive_chunking.py  reranker.py  store_vector.py  test.py  utils.py
src/embeddings_index/: embeddings.npy  faiss.index
