[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-model-project"
version = "0.1.0"
description = "A Retrieval-Augmented Generation (RAG) model for retrieving information from PDFs."
authors = [
    {name = "Haaroon Afroz Ognawala", email = "haaroon.afroz@gmail.com"}
]
license = {text = "MIT"}  # Or {file = "LICENSE"}
readme = "README.md"
keywords = ["RAG", "PDF", "NLP", "streamlit"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "nltk>=3.8.1",
    "spacy>=3.6.0",
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.10.1",
    "pytesseract>=0.3.10",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
    "transformers>=4.35.0",
    "streamlit>=1.25.0",
    "numpy>=1.26.0",
    "pandas>=2.1.2",
    "scikit-learn>=1.4.2",
    "pytest>=7.4.2",
    "pillow>=10.1.0"
]

[project.scripts]
download_nltk = "src.utils.download_nltk_data"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "setuptools_scm.get_version"}
